--- a/frontend/src/pages/DashBoard/Dashboard.css
+++ b/frontend/src/pages/DashBoard/Dashboard.css
@@ -58,14 +58,14 @@
 .url-input:focus {
   outline: none;
   border-color: var(--primary-color);
-  box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.1);
 }
 
 .submit-button {
   padding: 0 2rem;
   font-size: 1rem;
   color: white;
-  background-color: var(--primary-color);
+  background-color: #f27059;
   border: none;
   border-radius: var(--border-radius-md);
   cursor: pointer;
